@@ -5,6 +5,7 @@
 * enhancements
   * Added OAuth 2 support
   * sign_out_via is available in the router to configure the method used for sign out (by github.com/martinrehfeld)
+  * Improved Ajax requests handling in failure app (by github.com/spastorino)
 
 * bugfix
   * after_sign_in_path_for always receives a resource
